[+] вывод имени и даты рождения пользователя на основной странице
